--- a/client/index.html
+++ b/client/index.html
@@ -9,11 +9,128 @@
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css"> <!-- Sans serif -->
     <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"> <!-- Serif -->
     <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css"> <!-- Sans serif (bien pour les smileys) -->
-</head>
-<body>
+
+    <!-- Nos fichiers CSS -->
+    <link href="css/sprites.css" rel="stylesheet" type="text/css">
 
     <!-- Dépendances JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js" type="text/javascript"> // AngularJS </script>
+    <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
+
+    <!-- Nos scripts -->
+    <script type="text/javascript">
+        console.log("typeof $: " + typeof $)
+        console.log("typeof jQuery: " + typeof jQuery)
+    </script>
+</head>
+<body onload="main();">
+
+    <table id="smiley">
+        <caption>Liste des smileys disponible</caption>
+        <tr>
+            <td class="sprites" name=":)"></td>
+            <td class="sprites" name=":("></td>
+            <td class="sprites" name=":D"></td>
+            <td class="sprites" name="xD"></td>
+            <td class="sprites" name="(cool)"></td>
+            <td class="sprites" name=":o"></td>
+            <td class="sprites" name=";)"></td>
+            <td class="sprites" name="(chuckle)"></td>
+            <td class="sprites" name=":'("></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(fear)"></td>
+            <td class="sprites" name=":|"></td>
+            <td class="sprites" name="(kiss)"></td>
+            <td class="sprites" name=":p"></td>
+            <td class="sprites" name=":$"></td>
+            <td class="sprites" name="(wait)"></td>
+            <td class="sprites" name="(angel)"></td>
+            <td class="sprites" name=":x"></td>
+            <td class="sprites" name="(devil)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(wasntme)"></td>
+            <td class="sprites" name="(party)"></td>
+            <td class="sprites" name=":@"></td>
+            <td class="sprites" name="(doh)"></td>
+            <td class="sprites" name="]:)"></td>
+            <td class="sprites" name="(yawn)"></td>
+            <td class="sprites" name="(inlove)"></td>
+            <td class="sprites" name=":^)"></td>
+            <td class="sprites" name="(idontcare)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(heidy)"></td>
+            <td class="sprites" name="<3"></td>
+            <td class="sprites" name="(star)"></td>
+            <td class="sprites" name="(handshake)"></td>
+            <td class="sprites" name="(n)"></td>
+            <td class="sprites" name="(y)"></td>
+            <td class="sprites" name="(emo)"></td>
+            <td class="sprites" name="(clap)"></td>
+            <td class="sprites" name="(rofl)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(bug)"></td>
+            <td class="sprites" name="(headbang)"></td>
+            <td class="sprites" name="(clock)"></td>
+            <td class="sprites" name="(punch)"></td>
+            <td class="sprites" name="(drunk)"></td>
+            <td class="sprites" name="(smartphone)"></td>
+            <td class="sprites" name="(film)"></td>
+            <td class="sprites" name="(mail)"></td>
+            <td class="sprites" name="(brokenheart)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(cake)"></td>
+            <td class="sprites" name="(music)"></td>
+            <td class="sprites" name="($)"></td>
+            <td class="sprites" name="(pizza)"></td>
+            <td class="sprites" name="(cafe)"></td>
+            <td class="sprites" name="(sun)"></td>
+            <td class="sprites" name="(flex)"></td>
+            <td class="sprites" name="(tmi)"></td>
+            <td class="sprites" name="(flower)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(skome)"></td>
+            <td class="sprites" name="(rain)"></td>
+            <td class="sprites" name="(whew)"></td>
+            <td class="sprites" name="(shake)"></td>
+            <td class="sprites" name="(bow)"></td>
+            <td class="sprites" name="(think)"></td>
+            <td class="sprites" name="(call)"></td>
+            <td class="sprites" name="(tumbleweed)"></td>
+            <td class="sprites" name="(beer)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(nerd)"></td>
+            <td class="sprites" name="(hi)"></td>
+            <td class="sprites" name="(mm)"></td>
+            <td class="sprites" name="(puke)"></td>
+            <td class="sprites" name="(worry)"></td>
+            <td class="sprites" name="(facepalm)"></td>
+            <td class="sprites" name="(dance)"></td>
+            <td class="sprites" name="(bandit)"></td>
+            <td class="sprites" name="(drink)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="|-)"></td>
+            <td class="sprites" name="(ninja)"></td>
+            <td class="sprites" name="(girl)"></td>
+            <td class="sprites" name="(hug)"></td>
+            <td class="sprites" name="(yn)"></td>
+            <td class="sprites" name="(envy)"></td>
+            <td class="sprites" name="(talktothehand)"></td>
+            <td class="sprites" name="(cat)"></td>
+            <td class="sprites" name="(idea)"></td>
+        </tr>
+        <tr>
+            <td class="sprites" name="(rock)"></td>
+            <td class="sprites" name="(poolparty)"></td>
+        </tr>
+    </table>
 </body>
 </html>
