--- a/client/index.html
+++ b/client/index.html
@@ -1,136 +1,178 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>WebIRC</title>
-    <meta charset=utf-8>
+<html ng-app="main">
+    <head>
+        <title>WebIRC</title>
+        <meta charset=utf-8>
 
-    <!-- Polices supplémentaire -->
-    <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel=stylesheet type=text/css> <!-- Presque Monospace -->
-    <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css"> <!-- Sans serif -->
-    <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"> <!-- Serif -->
-    <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css"> <!-- Sans serif (bien pour les smileys) -->
+        <!-- Polices supplémentaire -->
+        <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel=stylesheet type=text/css> <!-- Presque Monospace -->
+        <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css"> <!-- Sans serif -->
+        <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css"> <!-- Serif -->
+        <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css"> <!-- Sans serif (bien pour les smileys) -->
 
-    <!-- Nos fichiers CSS -->
-    <link href="css/sprites.css" rel="stylesheet" type="text/css">
+        <!-- Nos fichiers CSS -->
+        <link href="css/sprites.css" rel="stylesheet" type="text/css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
 
-    <!-- Dépendances JavaScript -->
-    <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js" type="text/javascript"> // AngularJS </script>
-    <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
+        <!-- Dépendances JavaScript -->
+        <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.js" type="text/javascript"> // AngularJS </script>
+        <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
 
-    <!-- Nos scripts -->
-    <script type="text/javascript">
-        console.log("typeof $: " + typeof $)
-        console.log("typeof jQuery: " + typeof jQuery)
-    </script>
-</head>
-<body onload="main();">
-
-    <table id="smiley">
-        <caption>Liste des smileys disponible</caption>
-        <tr>
-            <td class="sprites" name=":)"></td>
-            <td class="sprites" name=":("></td>
-            <td class="sprites" name=":D"></td>
-            <td class="sprites" name="xD"></td>
-            <td class="sprites" name="(cool)"></td>
-            <td class="sprites" name=":o"></td>
-            <td class="sprites" name=";)"></td>
-            <td class="sprites" name="(chuckle)"></td>
-            <td class="sprites" name=":'("></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(fear)"></td>
-            <td class="sprites" name=":|"></td>
-            <td class="sprites" name="(kiss)"></td>
-            <td class="sprites" name=":p"></td>
-            <td class="sprites" name=":$"></td>
-            <td class="sprites" name="(wait)"></td>
-            <td class="sprites" name="(angel)"></td>
-            <td class="sprites" name=":x"></td>
-            <td class="sprites" name="(devil)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(wasntme)"></td>
-            <td class="sprites" name="(party)"></td>
-            <td class="sprites" name=":@"></td>
-            <td class="sprites" name="(doh)"></td>
-            <td class="sprites" name="]:)"></td>
-            <td class="sprites" name="(yawn)"></td>
-            <td class="sprites" name="(inlove)"></td>
-            <td class="sprites" name=":^)"></td>
-            <td class="sprites" name="(idontcare)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(heidy)"></td>
-            <td class="sprites" name="<3"></td>
-            <td class="sprites" name="(star)"></td>
-            <td class="sprites" name="(handshake)"></td>
-            <td class="sprites" name="(n)"></td>
-            <td class="sprites" name="(y)"></td>
-            <td class="sprites" name="(emo)"></td>
-            <td class="sprites" name="(clap)"></td>
-            <td class="sprites" name="(rofl)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(bug)"></td>
-            <td class="sprites" name="(headbang)"></td>
-            <td class="sprites" name="(clock)"></td>
-            <td class="sprites" name="(punch)"></td>
-            <td class="sprites" name="(drunk)"></td>
-            <td class="sprites" name="(smartphone)"></td>
-            <td class="sprites" name="(film)"></td>
-            <td class="sprites" name="(mail)"></td>
-            <td class="sprites" name="(brokenheart)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(cake)"></td>
-            <td class="sprites" name="(music)"></td>
-            <td class="sprites" name="($)"></td>
-            <td class="sprites" name="(pizza)"></td>
-            <td class="sprites" name="(cafe)"></td>
-            <td class="sprites" name="(sun)"></td>
-            <td class="sprites" name="(flex)"></td>
-            <td class="sprites" name="(tmi)"></td>
-            <td class="sprites" name="(flower)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(skome)"></td>
-            <td class="sprites" name="(rain)"></td>
-            <td class="sprites" name="(whew)"></td>
-            <td class="sprites" name="(shake)"></td>
-            <td class="sprites" name="(bow)"></td>
-            <td class="sprites" name="(think)"></td>
-            <td class="sprites" name="(call)"></td>
-            <td class="sprites" name="(tumbleweed)"></td>
-            <td class="sprites" name="(beer)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(nerd)"></td>
-            <td class="sprites" name="(hi)"></td>
-            <td class="sprites" name="(mm)"></td>
-            <td class="sprites" name="(puke)"></td>
-            <td class="sprites" name="(worry)"></td>
-            <td class="sprites" name="(facepalm)"></td>
-            <td class="sprites" name="(dance)"></td>
-            <td class="sprites" name="(bandit)"></td>
-            <td class="sprites" name="(drink)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="|-)"></td>
-            <td class="sprites" name="(ninja)"></td>
-            <td class="sprites" name="(girl)"></td>
-            <td class="sprites" name="(hug)"></td>
-            <td class="sprites" name="(yn)"></td>
-            <td class="sprites" name="(envy)"></td>
-            <td class="sprites" name="(talktothehand)"></td>
-            <td class="sprites" name="(cat)"></td>
-            <td class="sprites" name="(idea)"></td>
-        </tr>
-        <tr>
-            <td class="sprites" name="(rock)"></td>
-            <td class="sprites" name="(poolparty)"></td>
-        </tr>
-    </table>
-</body>
+        <!-- Nos scripts -->
+        <script type="text/javascript">
+            //console.log("typeof $: " + typeof $)
+            //console.log("typeof jQuery: " + typeof jQuery)
+        </script>
+        <script src="js/main.js" type="text/javascript"></script>
+    </head>
+    <body>
+        <h1>Client IRC</h1>
+        <section>
+            <!-- Smileys -->
+            <table id="smiley" hidden> <!-- Pour l'instant => hidden, et mis n'importe où !!! -->
+                <caption>Liste des smileys disponible</caption>
+                <tr>
+                    <td class="sprites" name=":)"></td>
+                    <td class="sprites" name=":("></td>
+                    <td class="sprites" name=":D"></td>
+                    <td class="sprites" name="xD"></td>
+                    <td class="sprites" name="(cool)"></td>
+                    <td class="sprites" name=":o"></td>
+                    <td class="sprites" name=";)"></td>
+                    <td class="sprites" name="(chuckle)"></td>
+                    <td class="sprites" name=":'("></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(fear)"></td>
+                    <td class="sprites" name=":|"></td>
+                    <td class="sprites" name="(kiss)"></td>
+                    <td class="sprites" name=":p"></td>
+                    <td class="sprites" name=":$"></td>
+                    <td class="sprites" name="(wait)"></td>
+                    <td class="sprites" name="(angel)"></td>
+                    <td class="sprites" name=":x"></td>
+                    <td class="sprites" name="(devil)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(wasntme)"></td>
+                    <td class="sprites" name="(party)"></td>
+                    <td class="sprites" name=":@"></td>
+                    <td class="sprites" name="(doh)"></td>
+                    <td class="sprites" name="]:)"></td>
+                    <td class="sprites" name="(yawn)"></td>
+                    <td class="sprites" name="(inlove)"></td>
+                    <td class="sprites" name=":^)"></td>
+                    <td class="sprites" name="(idontcare)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(heidy)"></td>
+                    <td class="sprites" name="<3"></td>
+                    <td class="sprites" name="(star)"></td>
+                    <td class="sprites" name="(handshake)"></td>
+                    <td class="sprites" name="(n)"></td>
+                    <td class="sprites" name="(y)"></td>
+                    <td class="sprites" name="(emo)"></td>
+                    <td class="sprites" name="(clap)"></td>
+                    <td class="sprites" name="(rofl)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(bug)"></td>
+                    <td class="sprites" name="(headbang)"></td>
+                    <td class="sprites" name="(clock)"></td>
+                    <td class="sprites" name="(punch)"></td>
+                    <td class="sprites" name="(drunk)"></td>
+                    <td class="sprites" name="(smartphone)"></td>
+                    <td class="sprites" name="(film)"></td>
+                    <td class="sprites" name="(mail)"></td>
+                    <td class="sprites" name="(brokenheart)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(cake)"></td>
+                    <td class="sprites" name="(music)"></td>
+                    <td class="sprites" name="($)"></td>
+                    <td class="sprites" name="(pizza)"></td>
+                    <td class="sprites" name="(cafe)"></td>
+                    <td class="sprites" name="(sun)"></td>
+                    <td class="sprites" name="(flex)"></td>
+                    <td class="sprites" name="(tmi)"></td>
+                    <td class="sprites" name="(flower)"></td>
+                </tr>
+                    <tr>
+                    <td class="sprites" name="(skome)"></td>
+                    <td class="sprites" name="(rain)"></td>
+                    <td class="sprites" name="(whew)"></td>
+                    <td class="sprites" name="(shake)"></td>
+                    <td class="sprites" name="(bow)"></td>
+                    <td class="sprites" name="(think)"></td>
+                    <td class="sprites" name="(call)"></td>
+                    <td class="sprites" name="(tumbleweed)"></td>
+                    <td class="sprites" name="(beer)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(nerd)"></td>
+                    <td class="sprites" name="(hi)"></td>
+                    <td class="sprites" name="(mm)"></td>
+                    <td class="sprites" name="(puke)"></td>
+                    <td class="sprites" name="(worry)"></td>
+                    <td class="sprites" name="(facepalm)"></td>
+                    <td class="sprites" name="(dance)"></td>
+                    <td class="sprites" name="(bandit)"></td>
+                    <td class="sprites" name="(drink)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="|-)"></td>
+                    <td class="sprites" name="(ninja)"></td>
+                    <td class="sprites" name="(girl)"></td>
+                    <td class="sprites" name="(hug)"></td>
+                    <td class="sprites" name="(yn)"></td>
+                    <td class="sprites" name="(envy)"></td>
+                    <td class="sprites" name="(talktothehand)"></td>
+                    <td class="sprites" name="(cat)"></td>
+                    <td class="sprites" name="(idea)"></td>
+                </tr>
+                <tr>
+                    <td class="sprites" name="(rock)"></td>
+                    <td class="sprites" name="(poolparty)"></td>
+                </tr>
+            </table>
+        </section>
+        <!-- Formulaire contenant tout les camps d'identifications,... / Affiche le champ permettant d'écrire un message lors du click sur "Go" -->
+        <form action="#" ng-submit="showTextField()" ng-hide="showForm" name=frm1 id="config" ng-controller="fieldsController as fields">
+            <fieldset class="fields">
+                <p>
+                    <label for=nickname>Nickname :</label>
+                    <input type=text id=nickname name="nickname" ng-model="user.nickname" autofocus required>
+                </p>
+                <p>
+                    <label for=username>Username :</label>
+                    <input type=text id=username name="username" ng-model="user.username" required>
+                </p>
+                <p>
+                    <label for=realname>Realname :</label>
+                    <input type=text id=realname name="realname" ng-model="user.realname" required>
+                </p>
+                <p>
+                    <label for=password>Password :</label>
+                    <input type=password id=password name="password" ng-model="user.password" required>
+                </p>
+                <p>
+                    <label for=joinCommand>Auto-Join-Command : </label>
+                    <textarea rows="4" id=joinCommand name="joinCommand" ng-model="user.joinCommand"></textarea>
+                </p>
+                <p>
+                    Auto-Join-Channel <input type=checkbox id=joinChannel value="Auto-Join-Channel" name=user.joinChannel ng-model="joinChannel">
+                </p>
+                <p>{{user}}</p> <!-- Vérifie que les champs devraient s'ajouter dans un tableau sous la bonne forme et bonne syntaxe / A enlever par après -->
+                <input type=submit value="Go">
+            </fieldset>
+        </form>
+        <!-- Champs pour écrire le message et l'envoyer / Caché par défaut -->
+        <form action="#" ng-submit="sendText()" ng-show="showTypeMsg">
+            <fieldset class="message">
+                <textarea rows="4" placeholder="Entrez votre message ici..." required></textarea>
+                <input type="submit" id=Envoyer value="Envoyer">
+            </fieldset>
+        </form>
+    </body>
 </html>
