--- a/client/index.html
+++ b/client/index.html
@@ -18,13 +18,11 @@
         <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.js" type="text/javascript"> // AngularJS </script>
         <script src="http://underscorejs.org/underscore-min.js" type="text/javascript"> // underscore </script>
+        <script src="https://cdn.socket.io/socket.io-1.4.3.js"> // Socket.io </script>
 
         <!-- Nos scripts -->
-        <script type="text/javascript">
-            //console.log("typeof $: " + typeof $)
-            //console.log("typeof jQuery: " + typeof jQuery)
-        </script>
         <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/IRC.js"></script>
     </head>
     <body>
         <h1>Client IRC</h1>
@@ -161,7 +159,8 @@
                     <textarea rows="4" id=joinCommand name="joinCommand" ng-model="user.joinCommand"></textarea>
                 </p>
                 <p>
-                    Auto-Join-Channel <input type=checkbox id=joinChannel value="Auto-Join-Channel" name=user.joinChannel ng-model="joinChannel">
+                    <label for=joinChannel>Auto-Join-Channel : </label>
+                    <textarea rows="4" id=joinChannel name=joinChannel ng-model="joinChannel"></textarea>
                 </p>
                 <p>{{user}}</p> <!-- Vérifie que les champs devraient s'ajouter dans un tableau sous la bonne forme et bonne syntaxe / A enlever par après -->
                 <input type=submit value="Go">
