--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
         <!-- Nos fichiers CSS -->
         <link href="css/sprites.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/responsive.css" rel="stylesheet" type="text/css" media="screen">
 
         <!-- Dépendances JavaScript -->
         <script src="http://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"> // jQuery </script>
