Ajout de la date et de l'heure

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
 
 			<header>
 				<h1>Web IRC</h1><span id="titre">//
-				<!--<span id="date" ng-bind='currentDate | "DD:MM:YYYY" "HH:mm"'></span>--></span>
+				<span id="date" ng-bind='date | date:"medium"'></span></span>
 			</header>
 
 			<main id=chatbox ng-show="currentChannel">
